<?xml version="1.0"?>
<package format = "2">
    <name>bumpybot_hw_interface</name>
    <version>0.0.0</version>
    <description>Bumpybot's hardware interface with Everest servo drives</description>

    <maintainer email="carlos.gonzalez@utexas.edu">Carlos Gonzalez</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

<!--    <depend>realtime_tools</depend>-->
    <build_depend>controller_manager</build_depend>
    <build_depend>hardware_interface</build_depend>
    <build_depend>soem</build_depend>
    <build_depend>urdf</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>rosparam_shortcuts</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>message_generation</build_depend>

    <exec_depend>controller_manager</exec_depend>
    <exec_depend>hardware_interface</exec_depend>
    <exec_depend>soem</exec_depend>
    <exec_depend>urdf</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>rosparam_shortcuts</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>message_runtime</exec_depend>


</package>
